# for-tbcsfe2

./: .gitignore  Cargo.toml  README.md  run_wasm.sh
.github/workflows/: build-android.yml
assets/locales/en/: main.ftl  map.ftl  metadata.toml
bcsfe_derive/: Cargo.toml
bcsfe_derive/src/: lib.rs
docs/: CONTRIBUTING.md  SAVE_FILE.md
src/: asset_manager.rs  country_code.rs  edits.rs  ext_source.rs  game_data.rs  game_version.rs  hash.rs  lib.rs  localization.rs  main.rs  save.rs  save_shortcuts.rs  stream.rs
src/adb/: adb_handler.rs  mod.rs  waydroid_handler.rs
src/blocks/: gv_100000.rs  gv_100100.rs  gv_100300.rs  gv_100400.rs  gv_100600.rs  gv_100700.rs  gv_100900.rs  gv_101000.rs  gv_110000.rs  gv_110500.rs  gv_110600.rs  gv_110700.rs  gv_110800.rs  gv_111000.rs  gv_120000.rs  gv_120100.rs  gv_120200.rs  gv_120400.rs  gv_120500.rs  gv_120600.rs  gv_120700.rs  gv_130100.rs  gv_130301.rs  gv_130400.rs  gv_130500.rs  gv_130600.rs  gv_130700.rs  gv_140000.rs  gv_140100.rs  gv_140200.rs  gv_140300.rs  gv_140500.rs  gv_140700.rs  gv_44  gv_44.rs  gv_45.rs  gv_46.rs  gv_47.rs  gv_48.rs  gv_49.rs  (+42 more)
src/edits/: basic_items.rs  main_story.rs
src/game/: main_story.rs  mod.rs
src/network/: account_info.rs  mod.rs  password.rs  signature.rs  stored_string.rs  transfer.rs  transfers.rs
src/ui/: adb.rs  app.rs  asset.rs  catfood.rs  config.rs  editview.rs  helper.rs  loadsave.rs  localization.rs  mainstory.rs  mod.rs  savesave.rs
wwww/: index.html
