[package]
name = "bcsfe_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bcsfe_derive = { path = "./bcsfe_derive" }
md5 = "0.8"
thiserror = { version = "2.0", optional = true }
rfd = { version = "0.15", optional = true }
# iced = { version = "0.13", optional = true, features = ["tokio"] }
iced = { git = "https://github.com/iced-rs/iced.git", optional = true, features = [
  "tokio",
] }
reqwest = { version = "0.12", optional = true, features = [
  "json",
  "multipart",
] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
getrandom = { version = "0.3", optional = true }
fluent = { version = "0.17", optional = true }
unic-langid = { version = "0.9", optional = true }
toml = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }
sha1 = { version = "0.10", optional = true }
zip = { version = "4.3", optional = true }
adb_client = { version = "2.1", optional = true }
directories = { version = "6.0", optional = true }
uuid = { version = "1.18", optional = true, features = ["v4"] }
serde_arrays = { version = "0.2", optional = true }

[workspace]
members = ["bcsfe_derive"]

[features]
gui = [
  "network",
  "adb",
  "localization",
  "dep:iced",
  "dep:rfd",
  "dep:toml",
  "dep:serde",
  "dep:thiserror",
  "dep:directories",
]
serde = ["dep:serde", "dep:serde_arrays"]
network = [
  "dep:reqwest",
  "dep:serde",
  "dep:getrandom",
  "dep:serde_json",
  "dep:sha2",
  "dep:sha1",
  "dep:hmac",
  "dep:hex",
  "dep:zip",
  "dep:thiserror",
  "dep:uuid",
]
localization = ["dep:fluent", "dep:unic-langid"]
adb = ["dep:adb_client"]
