[package]
name = "bcsfe_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bcsfe_derive = { path = "./bcsfe_derive" }
md5 = { version = "0.8", optional = true }
thiserror = { version = "2.0", optional = true }
reqwest = { version = "0.12", optional = true, features = [
  "json",
  "multipart",
] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
getrandom = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }
sha1 = { version = "0.10", optional = true }
zip = { version = "4.3", optional = true }
uuid = { version = "1.18", optional = true, features = ["v4"] }
tempfile = { version = "3.21", optional = true }
serde_arrays = { version = "0.2", optional = true }

[workspace]
members = ["bcsfe_derive"]

[features]
serde = ["dep:serde", "dep:serde_arrays"]
network = [
  "hash",
  "serde",
  "dep:reqwest",
  "dep:getrandom",
  "dep:serde_json",
  "dep:sha2",
  "dep:sha1",
  "dep:hmac",
  "dep:hex",
  "dep:zip",
  "dep:thiserror",
  "dep:uuid",
]
adb = ["dep:tempfile"]
hash = ["dep:md5"]
