[package]
name = "bcsfe_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcsfe_derive = { path = "./bcsfe_derive" }
md5 = { version = "0.8", optional = true }
thiserror = { version = "2.0", optional = true }
reqwest = { version = "0.12", optional = true, features = ["json", "multipart"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
getrandom = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }
sha1 = { version = "0.10", optional = true }
zip = { version = "8.5", optional = true }
uuid = { version = "1.18", optional = true, features = ["v4"] }
tempfile = { version = "3.21", optional = true }
serde_arrays = { version = "0.2", optional = true }
tokio = { version = "1.49.0", features = ["full"] }
xz2 = { version = "0.1", optional = true }
tar = { version = "0.4", optional = true }
jni = { version = "0.21", optional = true }
log = { version = "0.4", optional = true }
android_logger = { version = "0.15", optional = true }

[workspace]
members = ["bcsfe_derive"]
resolver = "2"

[workspace.dependencies]
jni = { version = "0.21" }
log = { version = "0.4" }
android_logger = { version = "0.15" }

[features]
default = []
serde = ["dep:serde", "dep:serde_arrays"]
network = [
  "hash",
  "serde",
  "dep:reqwest",
  "dep:getrandom",
  "dep:serde_json",
  "dep:sha2",
  "dep:sha1",
  "dep:hmac",
  "dep:hex",
  "dep:zip",
  "dep:thiserror",
  "dep:uuid",
]
adb = ["dep:tempfile"]
hash = ["dep:md5"]
game_data = ["dep:reqwest", "dep:xz2", "dep:serde", "dep:thiserror", "dep:tar"]
jni = ["dep:jni", "dep:log", "dep:android_logger", "network", "hash", "serde", "game_data"]
